[metadata]
name = mario-saves-peach
version = 0.0.0
license = MIT
description = <A short description>
long_description = file: README.md
author = Joshua Fermin
author_email = Joshuafermindev@gmail.com
classifiers=
    Development Status :: 1 - Planning

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =

[options.packages.find]
where=src
